--- a/oops.ipynb
+++ b/oops.ipynb
@@ -195,6 +195,152 @@
    "execution_count": null,
    "id": "af7637e1",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jo\n"
+     ]
+    }
+   ],
+   "source": [
+    "# class relationship\n",
+    "# 1. aggregation --> has a relationship --> one class owns the other class\n",
+    "# like customer class owns a address---customer owns a address\n",
+    "# class customer :\n",
+    "#     def __init__(self,name, address, gender):\n",
+    "#         self.name =name\n",
+    "#         self.gender = gender\n",
+    "#         self.address =address\n",
+    "#     def print_add(self):\n",
+    "#         print(self.address.city, self.address.state,self.address.pin)\n",
+    "\n",
+    "# class address :\n",
+    "#     def __init__(self,city,state,pin):\n",
+    "#         self.city =city\n",
+    "#         self.state =state\n",
+    "#         self.pin = pin\n",
+    "# add1=address('gurugram','haryana',302011)\n",
+    "# cust=customer('jo',add1,'male')\n",
+    "# cust.print_add()\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 2. inheritance\n",
+    "class user :\n",
+    "    def __init__(self):\n",
+    "        self.name ='jo'\n",
+    "    def login(self):\n",
+    "        print('login')\n",
+    "#child\n",
+    "class  student(user):\n",
+    "    # def __init__(self):\n",
+    "    #    self.roll_no =100\n",
+    "    \n",
+    "    def enroll(self):\n",
+    "        print('enrolll into course')\n",
+    "u = user()\n",
+    "s= student()\n",
+    "print(s.name)\n",
+    "# print(s.roll_no)\n",
+    "\n",
+    "\n",
+    "# IN CLASS DIAGRAM FOR AGGREGATION THERE WILL BE RHOMBUS (kajukatli)\n",
+    "# for inheritance there will be arrow -> // arrow ka head parent ki trf hota hai\n",
+    "\n",
+    "\n",
+    "\n",
+    "# what get inherit?\n",
+    "#1.constructor\n",
+    "#2.no private attribute\n",
+    "#3.non private method\n",
+    "\n",
+    "\n",
+    "#child class never acces parent private member/attribute of class\n",
+    "#by getter we can access private class member too\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "efaa017c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## in method overriding --parent me or child me ek function same naam  se hota hai\n",
+    "# us time child ka suna jata h\n",
+    "# in simple jab baat choice ki aaye toh baccho ki suni jati hai"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8abbcd2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#super keyword\n",
+    "#super ko use krke parent ko access kr sakte hai\n",
+    "# super always use in class or mostly in child class // class k bahar error dega\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "0f228624",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#inheritance summary\n",
+    "# a class can inherit from another class\n",
+    "#inherit improves the   ocde reuse\n",
+    "# constructor , method , attribute  get inherit fclato child class\n",
+    "#the parent has no acess to the child clASS\n",
+    "#private property not directly access\n",
+    "#child class k be ovverride --> method overriding\n",
+    "#super()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90bc65ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#polymorphism ka mtlb hota h situation k hisab se dhang se behave kre\n",
+    "#1. method overloading\n",
+    "#2.method overrriding -> dono ka same hai toh child ka call hoga\n",
+    "#3.operator overloading\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c72286c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f265d3e6",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
