--- a/ml.ipynb
+++ b/ml.ipynb
@@ -18,7 +18,16 @@
    "outputs": [],
    "source": [
     "# Types of machine learning\n",
-    "1. super vised -> "
+    "1. super vised ->  1. classification\n",
+    "                    2. rergression\n",
+    "\n",
+    "\n",
+    "2. unserpervised ---> 1. clustering\n",
+    "                      2. dimensanality reduction \n",
+    "                      3. anamoly detection \n",
+    "                       4.association \n",
+    "\n",
+    "3. semi-supervised "
    ]
   }
  ],
