--- a/ml.ipynb
+++ b/ml.ipynb
@@ -18,11 +18,12 @@
    "outputs": [],
    "source": [
     "# Types of machine learning\n",
-    "1. super vised ->  1. classification\n",
-    "                    2. rergression\n",
+    "1. super vised ->  1. classification -> isme o/p categorical ya character me aata hai\n",
+    "                    2. rergression  -> jB OUTPUT APNA  numerical aaye \n",
     "\n",
     "\n",
-    "2. unserpervised ---> 1. clustering\n",
+    "2. unserpervised ---> isme sirf input hota h supervised me i/p and o/p both hote hai\n",
+    "                    1. clustering\n",
     "                      2. dimensanality reduction \n",
     "                      3. anamoly detection \n",
     "                       4.association \n",
