--- a/ml.ipynb
+++ b/ml.ipynb
@@ -37,6 +37,79 @@
     "4. reinforcement learning - ek model ko train krna by giving reward and panality\n",
     "jab wo sahi kaam krta hai toh reward or galti krta h toh penality "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b3ddd2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#instance vs model-based learning\n",
+    "=> jo model ratne lag jata hai or fir action leta hai use bolte h instace learning\n",
+    "suppose ek point choose kia uske aas pass 3 or point the do red ek blue toh wo point bhi red hoga\n",
+    "example : KNN \n",
+    "it takes more storage\n",
+    "\n",
+    "=> or jo fundamental pattern dhundhke action lene ki kosis krta hai wo hai model based learning\n",
+    "yeh ek curve draw kr dega jo curve me aayega wo red jo nhi aaya wo blue\n",
+    "example : linear regression , logistic regr ,decisoion tree\n",
+    "takes less storage \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bed2c57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#challenges in ml\n",
+    "->  1.data gathering is quite difficult / data collection\n",
+    "-> to collect data : 1.fetch data from API  2. web scrapping\n",
+    "-> 2. insufficient data\n",
+    "-> 3. non representing data\n",
+    "      -> sampling noise = apn ne only india m pucha kon jeetega\n",
+    "      -> sampling bais = humne world m pucha pr jayda tar indians the\n",
+    "-> 4. poor quality publish_display_data\n",
+    "-> 5. irreleavted feature or data\n",
+    "-> 6. overfitting = data ratt lia bs \n",
+    "-> 7.underfitting =\n",
+    "-> 8.s/w integeration = like bahut sare s/w abhi bhi accept nahi Krte\n",
+    "-> 9. offline  learning / deployment\n",
+    "-> 10. cost involved = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "992cbd45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#application of ml\n",
+    "1. Retail - amazon / dmart\n",
+    "2.banking and finance - customer profile k upper scanning hota hai \n",
+    "3. Transport - OLA \n",
+    "4. Manufacturing - Tesla \n",
+    "5. Consumer  Internet - Twitter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8289805b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# video 9\n",
+    "# machine learning  development life cycle\n",
+    "1.frame the data - ek baar sb soch lena ki kese banega , end product ky hoga, costing , time etc\n",
+    "2. Gathering Data -\n",
+    "3. data preposseeing - cleaning , remove (duplicates, missing value, outliers), scaling \n",
+    "4.exploratory data analysis (EDA)- graph wagera , analysis, vislaization , outlier detection , imbalnce\n",
+    "5. feature Engineering and selection - "
+   ]
   }
  ],
  "metadata": {
