--- a/ml.ipynb
+++ b/ml.ipynb
@@ -108,7 +108,11 @@
     "2. Gathering Data -\n",
     "3. data preposseeing - cleaning , remove (duplicates, missing value, outliers), scaling \n",
     "4.exploratory data analysis (EDA)- graph wagera , analysis, vislaization , outlier detection , imbalnce\n",
-    "5. feature Engineering and selection - "
+    "5. feature Engineering and selection - bahut features hote h , khuch ko hatana, khuch ko merge krna \n",
+    "6. model training , evaluation and selection \n",
+    "7. Model Deployment: ek s/w ya web banan jisme use kr sake\n",
+    "8. Testing \n",
+    "9. optimize- backup lete hai , planning krte h agr ab jab isko launch kr rhe h toh baad m kya dikkt aasakti h usse bachne k liye\n"
    ]
   }
  ],
