--- a/ml.ipynb
+++ b/ml.ipynb
@@ -114,11 +114,83 @@
     "8. Testing \n",
     "9. optimize- backup lete hai , planning krte h agr ab jab isko launch kr rhe h toh baad m kya dikkt aasakti h usse bachne k liye\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa458923",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#tensor\n",
+    "# tensor is very important \n",
+    "#it is nothing but a  CONTAINER , a containers for number\n",
+    "# like 0 dimension it is scaler, a list of number is vector, 2d numberd is matrix etc\n",
+    "\n",
+    "# 0D Tensor / scaler\n",
+    "# import numpy as np\n",
+    "# a = np.array(4) # this is 0D\n",
+    "# a.ndim # this is used to find out the number of dimensions\n",
+    "\n",
+    "\n",
+    "#1D  Tensor/ vector\n",
+    "#Axis is = to 2D is have 2 axis\n",
+    "#number of rank = axis\n",
+    "# arr=np.array([1,2,3]) #------> 1 D array\n",
+    "# # 1D tensor but have 3-dimensions bcz of (1,2,3), agr (1,2) hote toh 2D hota , but tensor 1D hi hai, yeh jo (1,2,3 )hai wo vector hai but dimension 3D hai\n",
+    "# arr.ndim\n",
+    "# scaler lead to vector / scaler --> vector \n",
+    "\n",
+    "\n",
+    "# #2D Tensor  / Metrices \n",
+    "# mat=np.array([[1,2,3],[4,5,6],[7,8,9]])\n",
+    "# mat.ndim\n",
+    "\n",
+    "\n",
+    "\n",
+    "# more D Tensor /\n",
+    "\n",
+    "# ml me 5D tk hi hote h generally\n",
+    "\n",
+    "\n",
+    "# rank, axes , shape\n",
+    "# rank = no of axes , = no of dimensions\n",
+    "\n",
+    "\n",
+    "# example of 2D tensor\n",
+    "#jese kisi student ka record beena h use non vector  \n",
+    "\n",
+    "\n",
+    "#example of 3\n",
+    "d ==    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d993d941",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
