--- a/ml.ipynb
+++ b/ml.ipynb
@@ -161,8 +161,19 @@
     "#jese kisi student ka record beena h use non vector  \n",
     "\n",
     "\n",
-    "#example of 3\n",
-    "d ==    "
+    "#example of 3D Tensor\n",
+    "hi tushar  [[1,0,0,0],[0,1,0,0]]\n",
+    "hi rahul   [[1,0,0,0],[0,0,1,0]]\n",
+    "hi jo      [[1,0,0,0],[0,0,0,1]]\n",
+    "\n",
+    "\n",
+    "\n",
+    "# example of 4D Tensor\n",
+    "-> generally image processing me hote hai 4D . like (50,3,1200,8)\n",
+    "\n",
+    "\n",
+    "#examples of 5 d Tensor\n",
+    "-> videos is a example of it (4,1800,480,720,3)\n"
    ]
   },
   {
