--- a/python.ipynb
+++ b/python.ipynb
@@ -1265,7 +1265,9 @@
    "id": "8c39ea93",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#reduce function"
+   ]
   }
  ],
  "metadata": {
