--- a/python.ipynb
+++ b/python.ipynb
@@ -1261,13 +1261,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8c39ea93",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#reduce function"
+    "#reduce function\n",
+    "import functools\n",
+    "functools.reduce(lambda x,y:x+y,[1,2,3,4,5])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bcdf22b2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
