--- a/python.ipynb
+++ b/python.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "e0ff7f3e",
    "metadata": {},
    "outputs": [
@@ -24,6 +24,7 @@
     "# print(5*2)\n",
     "# print(5/2)\n",
     "# print(5//2)\n",
+    "\n",
     "# # RELATIONAL OPERATORS( we use this to find out kon chota h kon bda h etc   )\n",
     "# print(5<2)\n",
     "# print(5>2)  \n",
@@ -31,10 +32,12 @@
     "# print(5>=2)\n",
     "# print(5==2)\n",
     "# print(5!=2)\n",
+    "\n",
     "#LOGICAL OPERATORS\n",
     "# print(5<2 and 5>2) # agr dono hi true h to hi true hoga\n",
     "# print(5<2 or 5>2)  # agr dono me se koi bhi true h to true hoga\n",
     "# print(not(5<2))    # not ka matlab h ulta kr do\n",
+    " \n",
     "# # BITWISE OPERATORS\n",
     "# print(5&2)  # bitwise and   \n",
     "# print(5|2)  # bitwise or\n",
@@ -103,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "103d6269",
    "metadata": {},
    "outputs": [
@@ -114,7 +117,7 @@
       "['False', 'None', 'True', 'and', 'as', 'assert', 'async', 'await', 'break', 'class', 'continue', 'def', 'del', 'elif', 'else', 'except', 'finally', 'for', 'from', 'global', 'if', 'import', 'in', 'is', 'lambda', 'nonlocal', 'not', 'or', 'pass', 'raise', 'return', 'try', 'while', 'with', 'yield']\n",
       "9\n",
       "4\n",
-      "2025-07-23 16:43:24.757809\n"
+      "2025-08-05 18:21:04.657113\n"
      ]
     }
    ],
@@ -320,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "2cee4572",
    "metadata": {},
    "outputs": [
@@ -336,7 +339,7 @@
     "### loops \n",
     "#iska mtlb kisi bhi cheez ko baar baar krna\n",
     "# if someone ask that ki loop kaha kaam aata h toh the proffesional answer is that \n",
-    "# it is used in automation for websites like flikart , zomato etc\n",
+    "# it is used in automation for websites like flipkart , zomato etc\n",
     "\n",
     "#while loop\n",
     "\n",
@@ -387,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "0e73e971",
    "metadata": {},
    "outputs": [
@@ -404,7 +407,7 @@
    ],
    "source": [
     "## Nested Loops\n",
-    "# ek ke ander ek loop\n",
+    "# # ek ke ander ek loop\n",
     "for i  in range (1,5):\n",
     "    for j in range(1, i+1):\n",
     "            # print('*',end=' ')\n",
@@ -412,7 +415,9 @@
     "        print(j,end=' ')   \n",
     "    for k in range(i-1, 0, -1):\n",
     "        print(k,end=' ')  \n",
-    "    print()\n"
+    "    print()\n",
+    "\n",
+    "\n"
    ]
   },
   {
