--- a/python.ipynb
+++ b/python.ipynb
@@ -106,6 +106,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "1661af76",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "103d6269",
    "metadata": {},
@@ -586,11 +594,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 21, 22, 4, 5]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, [5, 6, 7]]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1074,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "21ac0af8",
    "metadata": {},
    "outputs": [
@@ -1136,7 +1147,7 @@
     "# power(3)\n",
     "\n",
     "#2. positional arguments\n",
-    "# power(2,3) #isme 2=2 and 3=b yahi hai positonal arg\n",
+    "# power(2,3) #isme a=2 and 3=b yahi hai positonal arg\n",
     "\n",
     "#3. keywword arg\n",
     "# power(b=3,a=2) # isme positon se nahi keyword se frk pd rha hai ki a ki value yeh b ki yeh\n",
